# tree-diff

./: .gitignore  stack.yaml  tree-diff.cabal
src/: Lib.hs
