name:                tree-diff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/foriequal0/tree-diff#readme
license:             BSD3
license-file:        LICENSE
author:              SeongChan Lee
maintainer:          foriequal@gmail.com
copyright:           2017 SeongChan Lee
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hxt >= 9.3.1.16 && < 9.4
                     , HTTP >= 4000.3.7 && < 4000.4
                     , network-uri >= 2.6.1.0 && < 2.7
                     , pipes >= 4.3.4 && < 4.4
                     , suffixtree == 0.2.2.1
  default-language:    Haskell2010

executable tree-diff-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tree-diff
  default-language:    Haskell2010

test-suite tree-diff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tree-diff
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/foriequal0/tree-diff
